test/src/main/webapp/WEB-INF/view/error/userorpassword.jsp
<%@ page contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" %>
<!DOCTYPE html>
<html>
<head>
    <title>Errorpage - user or password</title>
</head>
<body>
<h1> User not found, or password is incorrect. Please check the entered data or register</h1>
<h1></h1>
<a href="../">startpage</a>
</body>
</html>
